created dweet home page

--- a/src/app/dweet/dweet.component.css
+++ b/src/app/dweet/dweet.component.css
@@ -1,9 +1,29 @@
-.content{
-  padding: 19px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 4px;
+.dweet {
+    padding: 19px;
+    background-color: #fffdfd;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    margin: 10px;
 }
-.profile-avatar{
-  width: 30px;
+
+.dweet:hover {
+    background-color: #d8d8d8;
+}
+
+.profile-avatar {
+    width: 30px;
+}
+
+.dweet-block {
+    width: 70%;
+    margin: auto;
+    background-color: rgb(233, 233, 233);
+    padding: 10px;
+}
+
+.dweet-message {
+    padding: 10px;
+    margin: 10px;
+    background-color: rgba(204, 253, 189, 0.5);
+    border-radius: 10px;
 }
