--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
+<ng-template #template>
+    <div class="modal-header">
+        <h4 class="modal-title pull-left">New Dweet</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form>
+            <div class="form-group">
+                <label for="dweet">Dweet</label>
+                <input type="textarea" class="form-control" id="dweet" placeholder="Enter your dweet...">
+            </div>
+            <button type="submit" class="btn btn-md btn-primary">Dweet</button>
+        </form>
+    </div>
+</ng-template>
 <main class="container">
-  <router-outlet></router-outlet>
+    <button type="button" class="btn btn-outline-primary" (click)="openModal(template)">Dweet Now</button>
+    <router-outlet></router-outlet>
 </main>
