--- a/src/app/dweet/dweet.component.html
+++ b/src/app/dweet/dweet.component.html
@@ -1,32 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/dweets">Dweeter</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/dweets">Home
+    <a class="navbar-brand" href="/dweets">Dweeter</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/dweets">Home
           <span class="sr-only">(current)</span>
         </a>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link" (click)="signout()">Signout</button>
-      </li>
-    </ul>
-    <div id="search-component">
-      <input #searchBox id="search-box" class="form-control mr-sm-2" type="search" (keyup)="searchDweeter(searchBox.value)" placeholder="Search Dweeter"
-      />
-      <ul class="search-result">
-        <li *ngFor="let dweeter of searchedDweeter$ | async">
-          {{dweeter.userName}}
-          <button (click)="followDweeter(dweeter._id)">{{dweeter.isFollowing? 'Following' : 'Follow'}}</button>
-        </li>
-      </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" (click)="signout()">Signout
+                </a>
+                <!-- <button class="nav-link" (click)="signout()">Signout</button> -->
+            </li>
+        </ul>
+        <div id="search-component">
+            <input #searchBox id="search-box" class="form-control mr-sm-2" type="search" (keyup)="searchDweeter(searchBox.value)" placeholder="Search Dweeter" />
+            <ul class="search-result">
+                <li *ngFor="let dweeter of searchedDweeter$ | async">
+                    {{dweeter.userName}}
+                    <button (click)="followDweeter(dweeter._id)">{{dweeter.isFollowing? 'Following' : 'Follow'}}</button>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 <!-- <ng-template #template>
   <div class="modal-header">
@@ -47,41 +43,44 @@
   <button type="button" class="btn btn-outline-primary" (click)="openModal(template)">Dweet Now</button>
 </ng-template> -->
 
-
-<div>
-  <div class="form-group">
-    <input type="textarea" class="form-control" #newDweet id="new-dweet" placeholder="Enter your dweet...">
-  </div>
-  <button type="submit" class="btn btn-outline-primary" (click)="createDweet(newDweet.value)">Dweet Now</button>
-</div>
-
-
-<div *ngFor="let dweet of dweets" class="dweet-block">
-  <div class="dweet">
-    <div class="media">
-      <img class="mr-3" src="../../assets/user.svg" alt="Generic placeholder image">
-      <div class="media-body">
-        <h5 class="mt-0">
-          <a>{{dweet.dweeterName}}</a>
-        </h5>
-        <h6>Wrote on {{dweet.createdDate | date:'medium'}} </h6>
-        <p class="dweet-message">{{dweet.message}}</p>
-        <div>
-          <a>
-            <span class="badge badge-success">
-              <img src="../../assets/comment.svg"> {{dweet.comments.length }} </span>
-          </a>
-          <a (click)="likeDweet(dweet._id)">
-            <span class="badge badge-success">
-              <img src="../../assets/thumbsup.svg"> {{ dweet.likes.length }}</span>
-          </a>
-          <a>
-            <span class="badge badge-success">
-              <img src="../../assets/sync.svg"> {{dweet.redweets.length }}</span>
-          </a>
-        </div>
-      </div>
+<div class="container">
+    <div class="dweet-block dweet-now-form">
+        <form>
+            <div class="form-group">
+                <input type="textarea" class="form-control" #newDweet id="new-dweet" placeholder="Enter your dweet...">
+            </div>
+            <button type="button" class="btn btn-outline-primary" (click)="createDweet(newDweet.value)">Dweet Now</button>
+        </form>
     </div>
-  </div>
 
+
+    <div *ngFor="let dweet of dweets" class="dweet-block">
+        <div class="dweet">
+            <div class="media">
+                <img class="mr-3" style="width:15%;" src="../../assets/user.svg" alt="Generic placeholder image">
+                <div class="media-body">
+                    <h5 class="mt-0">
+                        <a>{{dweet.dweeterName}}</a>
+                    </h5>
+                    <h6>Wrote on {{dweet.createdDate | date:'medium'}} </h6>
+                    <p class="dweet-message">{{dweet.message}}</p>
+                    <div>
+                        <a>
+                            <span class="badge badge-success">
+              <img src="../../assets/comment.svg"> {{dweet.comments.length }} </span>
+                        </a>
+                        <a (click)="likeDweet(dweet._id)">
+                            <span class="badge badge-success">
+              <img src="../../assets/thumbsup.svg"> {{ dweet.likes.length }}</span>
+                        </a>
+                        <a>
+                            <span class="badge badge-success">
+              <img src="../../assets/sync.svg"> {{dweet.redweets.length }}</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
