--- a/src/app/dweet/dweet.component.html
+++ b/src/app/dweet/dweet.component.html
@@ -13,37 +13,21 @@
                 <!-- <button class="nav-link" (click)="signout()">Signout</button> -->
             </li>
         </ul>
-        <div id="search-component">
-            <input #searchBox id="search-box" class="form-control mr-sm-2" type="search" (keyup)="searchDweeter(searchBox.value)" placeholder="Search Dweeter" />
-            <ul class="search-result">
-                <li *ngFor="let dweeter of searchedDweeter$ | async">
-                    {{dweeter.userName}}
-                    <button (click)="followDweeter(dweeter._id)">{{dweeter.isFollowing? 'Following' : 'Follow'}}</button>
-                </li>
-            </ul>
-        </div>
+
     </div>
 </nav>
-<!-- <ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">New Dweet</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <form>
-      <div class="form-group">
-        <label for="dweet">Dweet</label>
-        <input type="textarea" class="form-control" id="dweet" placeholder="Enter your dweet...">
-      </div>
-      <button type="submit" class="btn btn-md btn-primary">Dweet</button>
-    </form>
-  </div>
-  <button type="button" class="btn btn-outline-primary" (click)="openModal(template)">Dweet Now</button>
-</ng-template> -->
 
+<div id="search-component">
+    <input maxlength="30" #searchBox id="search-box" class="form-control mr-sm-2" type="search" (keyup)="searchDweeter(searchBox.value)" placeholder="Search User..." />
+    <ul class="search-result list-group list-group-flush">
+        <li class="list-group-item" *ngFor="let dweeter of searchedDweeter$ | async">
+            {{dweeter.userName}}
+            <button [ngClass]="(dweeter.isFollowing==true)?'btn-primary':'btn-outline-primary'" class="btn btn-sm follow-btn" (click)="followDweeter(dweeter._id)">{{dweeter.isFollowing? 'Following' : 'Follow'}}</button>
+        </li>
+    </ul>
+</div>
 <div class="container">
+
     <div class="dweet-block dweet-now-form">
         <form>
             <div class="form-group">
@@ -55,7 +39,8 @@
 
 
     <div *ngFor="let dweet of dweets" class="dweet-block">
-        <div class="dweet">
+        <app-dweet-dialog [dweet]="dweet" (click)="openDweet(dweet)"></app-dweet-dialog>
+        <!-- <div class="dweet">
             <div class="media">
                 <img class="mr-3" style="width:15%;" src="../../assets/user.svg" alt="Generic placeholder image">
                 <div class="media-body">
@@ -80,7 +65,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
