--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,55 @@ footer {
 button {
     margin: 2px;
 }
+
+.dweet {
+    padding: 19px;
+    background-color: #fffdfd;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    margin: 10px;
+}
+
+.dweet:hover {
+    background-color: #d8d8d8;
+}
+
+.profile-avatar {
+    width: 30px;
+}
+
+.dweet-block {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(233, 233, 233);
+    padding: 10px;
+}
+
+.dweet-message {
+    padding: 10px;
+    margin: 10px;
+    background-color: rgba(204, 253, 189, 0.5);
+    border-radius: 10px;
+}
+
+.dweet-now-form {
+    border: 1px solid rgb(87, 87, 87);
+    border-radius: 4px;
+}
+
+.dweet-now-form button {
+    margin-left: 85%;
+}
+
+#search-component {
+    float: right;
+    width: 20%;
+    margin: 10px;
+}
+
+.follow-btn {
+    position: absolute;
+    right: 0px;
+    width: 100px;
+}
