--- a/src/app/auth/signup.component.html
+++ b/src/app/auth/signup.component.html
@@ -1,7 +1,10 @@
 <div class="container">
+  <h3>Join Dwitter today</h3>
     <div>
-        <div *ngIf="!isValidCredentials" class="alert alert-danger col-lg-6">
-            Invalid user name or password
+        <div *ngIf="!isValidDeatils" class="alert alert-danger col-lg-6">
+            <ul *ngFor="let msg of validationResults">
+              <li>{{msg}}</li>
+            </ul>
         </div>
         <form [formGroup]="signupForm" (ngSubmit)="onSubmit(signupForm)">
             <div class="form-group col-lg-6">
@@ -24,11 +27,13 @@
                 <input type="password" class="form-control" formControlName="password" />
                 <div class="alert alert-danger" [hidden]="signupForm.controls.password.untouched || signupForm.controls.password.valid">Password is required</div>
             </div>
-            <button type="submit" class="btn btn-default" [disabled]="!signupForm.valid">Submit</button>
+            <button type="submit" class="btn btn-default" [disabled]="!signupForm.valid">Sign Up</button>
         </form>
     </div>
 
 
     <div>
-        <div></div>
-    </div>
+        <span>Have an Account ?
+          <a href="/login">Login Now >></a>
+        </span>
+      </div>
