--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -4,7 +4,7 @@
     <div *ngIf="!isValidCredentials" class="alert alert-danger col-lg-6">
       Invalid user name or password
     </div>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm)">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="form-group col-lg-6">
         <label for="userName">User Name</label>
         <input type="text" class="form-control" formControlName="userName" />
