--- a/src/app/auth/signup.component.html
+++ b/src/app/auth/signup.component.html
@@ -6,7 +6,7 @@
               <li>{{msg}}</li>
             </ul>
         </div>
-        <form [formGroup]="signupForm" (ngSubmit)="onSubmit(signupForm)">
+        <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
             <div class="form-group col-lg-6">
                 <label for="userName">User Name</label>
                 <input type="text" class="form-control" formControlName="userName" />
